--- a/src/examples/contents/CMakeLists.txt
+++ b/src/examples/contents/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(contents contents.cpp)
 
 target_link_libraries(contents tse3)
+
+if (WIN32)
+	target_link_libraries(contents Winmm)
+endif()
