--- a/src/examples/midifile/CMakeLists.txt
+++ b/src/examples/midifile/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(midifile midifile.cpp)
 
 target_link_libraries(midifile tse3)
+
+if (WIN32)
+	target_link_libraries(midifile Winmm)
+endif()
